--- a/ios/MeticsTests/Info.plist
+++ b/ios/MeticsTests/Info.plist
@@ -20,5 +20,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>UIAppFonts</key>
+    <array>
+    <string>MaterialCommunityIcons.ttf</string>
+    <!-- Add any other icon fonts here -->
+    </array>
 </dict>
 </plist>
